fix(index): adds vertical spacing to buttons in Getting Started
Caused it to incorrectly render on mobile devices, where the buttons would break over multiple lines
without any vertical space between them.

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -606,6 +606,7 @@
 			li {
 				display: inline-block;
 				padding: 0 (_size(element-margin) * 0.5) 0 0;
+				margin-bottom: _size(element-margin) * 0.5;
 				vertical-align: middle;
 
 				&:last-child {
